# codex-memory

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SOUL.md  docker-compose.yml  package.json
.agents/plugins/: marketplace.json
.codex/: CONTEXT.md  HISTORY.json  INDEX.json  MEMORY.md  ROADMAP.md  SOUL.md  mem.config.json  memory-inspector-budgeter-tasks.md  npm-publishing.md  product-onboarding-roadmap.md  prompt-loop.md
.codex/context/: architecture.md  features.md  flow.md  information.md  infrastructure.md
.codex/feedback-review/: closure-roadmap.md  encryption-decision.md  final-acceptance.md  functional-review.md
.github/workflows/: ci.yml  publish-npm.yml
apps/api/: pyproject.toml
apps/api/app/core/: embeddings.py  models.py  ranking.py  settings.py
apps/api/app/routes/: memory.py
apps/api/app/static/: viewer.css  viewer.html  viewer.js
apps/api/app/storage/: sqlite.py  vector.py
apps/api/tests/: test_mcp_server_protocol.py  test_memory_api.py  test_ranking.py  test_roadmap_review.py  test_settings.py  test_stop_hook_capture.py
apps/cli/: LICENSE  README.md  package.json
apps/mcp-server/: package.json
docs/: codex-memories-comparison.md  codex-memory-opis-pl.md  development.md  mcp-integration.md  memory-types.md  philosophy.md  team-benefits.md  windows-install.md
infra/docker/: api.Dockerfile  mcp.Dockerfile
infra/scripts/: check-publishable-confirmed.mjs  check-publishable-package.mjs  npm-pack-smoke.mjs  pack-packages.mjs  refuse-root-publish.mjs  smoke-npx-install.mjs  smoke.ps1  smoke.sh  stage-cli-runtime.mjs
(+62 files in other folders)
