[project]
name = "codex-mem-api"
version = "0.1.0"
description = "FastAPI memory service for Codex-Mem."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0"
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
